# midso

./: CMakeLists.txt  LICENSE.md  README.md
app/: .CMakeLists.txt.swp  CMakeLists.txt  midso_main.cpp
dev/: generate_code.py  generate_code.sh
dev/midso/: backward_layer_interface.yaml  layer.yaml  layer_interface.yaml  linear_layer.yaml  linear_layer_backward.yaml  solver_interface.yaml  tensor.yaml
dev/midso/core/: key_value_tree.yaml  memory.yaml  tensor.yaml
dev/midso/layer/: argmax_layer.yaml  average_pool_layer.yaml  bias_layer.yaml  convolutional_layer.yaml  data_layer.yaml  drop_out_layer.yaml  dropout_layer.yaml  fully_connected_layer.yaml  layer_interface.yaml  linear_layer.yaml  locally_connected_layer.yaml  logistic_regression_layer.yaml  max_out_layer.yaml  max_pool_layer.yaml  normalize_layer.yaml  parametric_interface.yaml  relu_layer.yaml  reshape_layer.yaml  root_mean_square_layer.yaml  sigmoid_layer.yaml  tanh_layer.yaml  (+2 more)
doc/image/: structure.odg
example/mnist/: config_test.yaml  config_train.yaml  network_train.yaml  solver.yaml
include/midso/: backward_layer_interface.h  common.h  layer_interface.h  linear_layer.h  linear_layer_backward.h  macro.h  midso.h  parametric_interface.h  solver_interface.h  tensor.h  type.h
lib/: .CMakeLists.txt.swp  CMakeLists.txt
rule/: readme.txt  yamllint.py
src/midso/: linear_layer.cpp  linear_layer_backward.cpp  tensor.cpp
test/: CMakeLists.txt
test/midso/: layer.cpp  layer_interface.cpp  linear_layer.cpp  linear_layer_backward.cpp
test/midso/core/: g_p_u_memory.cpp  gpu_memory.cpp  hdf5.cpp  key_value.cpp  key_value_tree.cpp  memory.cpp  random.cpp  tensor.cpp  yaml.cpp
test/midso/layer/: argmax_layer.cpp  average_pool_layer.cpp  bias_layer.cpp  convolutional_layer.cpp  data_layer.cpp  drop_out_layer.cpp  dropout_layer.cpp  fully_connected_layer.cpp  layer_factory.cpp  linear_layer.cpp  locally_connected_layer.cpp  logistic_regression_layer.cpp  max_out_layer.cpp  max_pool_layer.cpp  negative_log_layer.cpp  normalize_layer.cpp  re_l_u_layer.cpp  relu_layer.cpp  reshape_layer.cpp  root_mean_square_layer.cpp  sigmoid_layer.cpp  softmax_layer.cpp  tanh_layer.cpp  transpose_layer.cpp
test/midso/layer/backward/: argmax_layer_backward.cpp  average_pool_layer_backward.cpp  convolutional_layer_backward.cpp  dropout_layer_backward.cpp  fully_connected_layer_backward.cpp  locally_connected_layer_backward.cpp  max_out_layer_backward.cpp  max_pool_layer_backward.cpp  negative_log_layer_backward.cpp  normalize_layer_backward.cpp  re_l_u_layer_backward.cpp  relu_layer_backward.cpp  reshape_layer_backward.cpp  root_mean_square_layer_backward.cpp  sigmoid_layer_backward.cpp  softmax_layer_backward.cpp  tanh_layer_backward.cpp  transpose_layer_backward.cpp
test/midso/network/: arrow.cpp  digraph.cpp  network.cpp  vertex.cpp
test/midso/runner/: runner_factory.cpp  test_runner.cpp  train_runner.cpp
test/midso/solver/: adadelta.cpp  rmsprop.cpp  solver_factory.cpp  stochastic_gradient_descent.cpp
test/sandbox/: CMakeLists.txt  cuda_allocate.cu  test_cuda_unique_ptr.cpp  test_digraph.cpp  test_layer_policy.cpp  test_pointer.cpp  test_tensor.cpp
(+152 files in other folders)
