cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_FLAGS --std=c++11)

project(sandbox_cuda_unique_ptr)
find_package(CUDA REQUIRED)
set(CUDA_NVCC_FLAGS -ccbin g++ --std=c++11 -arch=compute_35;-code=sm_35)
set(CUDA_PROPAGATE_HOST_FLAGS OFF)
include_directories(..)
file(GLOB CUDA_SRC_FILES cuda_allocate.cu)
file(GLOB CXX_SRC_FILES test_cuda_unique_ptr.cpp ../gtest-all.cc ../gtest_main.cc)
cuda_add_executable(${PROJECT_NAME} ${CXX_SRC_FILES} ${CUDA_SRC_FILES})
target_link_libraries(${PROJECT_NAME} pthread)

project(sandbox_layer_policy)
include_directories(..)
file(GLOB ${PROJECT_NAME}_SRC_FILES test_layer_policy.cpp ../gtest-all.cc ../gtest_main.cc)
cuda_add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC_FILES})
target_link_libraries(${PROJECT_NAME} pthread)

project(sandbox_pointer)
include_directories(..)
file(GLOB ${PROJECT_NAME}_SRC_FILES test_pointer.cpp ../gtest-all.cc ../gtest_main.cc)
cuda_add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC_FILES})
target_link_libraries(${PROJECT_NAME} pthread)

project(sandbox_digraph)
include_directories(..)
file(GLOB ${PROJECT_NAME}_SRC_FILES test_digraph.cpp ../gtest-all.cc ../gtest_main.cc)
cuda_add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC_FILES})
target_link_libraries(${PROJECT_NAME} pthread)

project(sandbox_tensor)
include_directories(..)
file(GLOB ${PROJECT_NAME}_SRC_FILES test_tensor.cpp ../gtest-all.cc ../gtest_main.cc)
cuda_add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC_FILES})
target_link_libraries(${PROJECT_NAME} pthread)

project(sandbox_kvt)
include_directories(.. ../../include)
file(GLOB ${PROJECT_NAME}_SRC_FILES test_kvt.cpp ../gtest-all.cc ../gtest_main.cc)
cuda_add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRC_FILES})
target_link_libraries(${PROJECT_NAME} pthread)
